fix overflow of timeline

--- a/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
+++ b/client/lampenhaus/src/components/CorrespondentView/CorrespondentView.css
@@ -8,4 +8,5 @@
 
 .correspondent-timeline .card-body {
     height: 150px;
+    overflow: hidden;
 }
